RDV
Version #.#
RELEASE DATE


INTRODUCTION


NEW FEATURES

  - Support for panning and zooming of an image. A clickable navigation image
    can be used to jump around parts of an image when zoomed in.
  - Filmstrip interface to view images
  - Support for viewing a thumbnail of an image to conserve bandwidth.
  - Support for PNG and GIF images.
  - DialViz, a visualization extension to view a numeric data channel on a dial.
  - Export of data to the MATLAB MAT-file format.
  - Cursors on an XY plot to indicate the current data point in a series.
  - Support for port knocking authentication.
  

BUG FIXES

  - [5] Children of shortcut servers aren't shown in channel list.


CHANGES

  - All RDV class were moved to the "org.rdv" package.
  - Plots set to auto range, don't always include zero anymore.