@@ -21,6 +21,7 @@ NEW FEATURES
 
 BUG FIXES
 
+  - [4] Can't connect to RBNB server with circular references.
   - [5] Children of shortcut servers aren't shown in channel list.
 
 
